# ponderada-cpp-maze

./: .gitignore  DOCUMENTATION_ALGORITHMS.md  Dockerfile  README.md  autonomus_navigation.cpp
cg/: CMakeLists.txt
cg/cg/: cg_autonomous_navigator.py
cg/cg/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
cg/cg/log/: latest_build
cg/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
cg/install/cg/lib/cg/: cg_autonomous_navigator  maze.py
cg/install/cg/share/ament_index/resource_index/package_run_dependencies/: cg
cg/install/cg/share/ament_index/resource_index/parent_prefix_path/: cg
cg/install/cg/share/cg/: package.bash  package.dsv  package.ps1  package.sh  package.xml
cg/log/: latest_build
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/cg/lib/cg/: cg_autonomous_navigator  maze  maze.py
install/cg/share/cg/: local_setup.dsv  local_setup.sh  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/cg_interfaces/include/cg_interfaces/cg_interfaces/msg/detail/: robot_sensors__functions.c  (+6 more)
install/cg_interfaces/include/cg_interfaces/cg_interfaces/srv/: get_map.hpp  move_cmd.hpp  reset.hpp
install/cg_interfaces/share/cg_interfaces/: local_setup.sh  package.sh
install/cg_interfaces/share/cg_interfaces/cmake/: cg_interfaces__rosidl_typesupport_introspection_cExport.cmake  export_cg_interfaces__rosidl_generator_cExport.cmake  export_cg_interfaces__rosidl_generator_cppExport.cmake
install/cg_interfaces/share/cg_interfaces/srv/: Reset_Request.msg
install/cg_solver/lib/cg_solver/: autonomous_navigator_node
install/cg_solver/share/cg_solver/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/cg_solver/share/cg_solver/cmake/: cg_solverConfig.cmake
install/cg_teleop/share/cg_teleop/: package.sh
install/my-test-package/share/my-test-package/: package.sh
log/: latest_build
ros2_env/: pyvenv.cfg
src/cg_solver/: CMakeLists.txt
src/cg_solver/src/: autonomous_navigator_node.cpp
(+15 files in other folders)
